--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap" rel="stylesheet">
-    <title>Event Flows - About</title>
+    <title>Event Flow - About</title>
   </head>
   <body>
     <header class="header" id="app">
@@ -41,7 +41,7 @@
         <div class="hero-about section">
           <img src="./assets/images/about/about.jpg" class="about_hero_image" alt="">
           <div class="hero_details">
-            <h1>Event Flows Bangkok</h1>
+            <h1>Event Flow Bangkok</h1>
             <p>We cater to small-scale, large-scale, and intimate gathering events with hundreds or thousands of attendees.</p>
           </div>
         </div>
@@ -53,6 +53,7 @@
                 Welcome to our event management company!
               </h4>
             </div>
+            
             <div class="about-info-details">
               <div class="section_title">
                 <h2>about <span>us</span></h2>
