--- a/index.html
+++ b/index.html
@@ -347,11 +347,8 @@
             <div class="footer_section">
               <h3>Contact us</h3>
               <ul>
-                <li>facebook.com/eventflows</li>
-                <li>Telegram : 123</li>
-                <li>Telegram : 123</li>
-                <li>Telegram : 123</li>
-                <li>Telegram : 123</li>
+                <li>eventflowbkk@gmail.com</li>
+                <li>0948517676</li>
               </ul>
             </div>
 
