--- a/portfolio.html
+++ b/portfolio.html
@@ -43,9 +43,10 @@
             <h2>our <span>portfolio.</span></h2>
             <p>Let's collaborate to orchestrate an exquisitely curated event, where creativity meets precision, turning your vision into a seamlessly executed and unforgettable experience.</p>
           </div>
-        </div>      
+        </div>
       </main>
-      <footer>
+      
+      <!-- <footer>
         <div class="footer_section_wrapper">
           <div class="footer_section footer_heading">
             <h4>Event Flows Bangkok</h4>
@@ -96,7 +97,7 @@
             <a href="" class="button">Signup</a>
           </div>
         </div>
-    </footer>
+    </footer> -->
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
