--- a/portfolio.html
+++ b/portfolio.html
@@ -176,9 +176,8 @@
               <div class="services_cards_details">
                 <h3>Special Effects:</h3>
                 <p>
-                  Professional photographers and videographers capturing photos and videos to preserve
-                  memories of social events. They can offer various packages, including a set number of hours or
-                  full-day coverage, editing services, and delivery options such as albums or digital copies.                  
+                  Incorporating special effects, such as confetti cannons, fog machines, snow machines, and
+                  bubbles, can add excitement and a sense of spectacle to events.                 
                 </p>
               </div>
             </a>
