--- a/portfolio.html
+++ b/portfolio.html
@@ -40,7 +40,7 @@
       <main>
         <div class="contact section">
           <div class="section_title">
-            <h2>our <span>portfolio.</span></h2>
+            <h2>our <span>portfolio</span></h2>
             <p>Let's collaborate to orchestrate an exquisitely curated event, where creativity meets precision, turning your vision into a seamlessly executed and unforgettable experience.</p>
           </div>
 
@@ -50,7 +50,7 @@
                 <img src="./assets/images/portfolio/event-planning.jpg" alt="" loading='lazy'>
               </div>
               <div class="services_cards_details">
-                <h3>Event Planning:</h3>
+                <h3>Event Planning</h3>
                 <p>
                   This involves initial consultation, budgeting, venue selection, theme and concept development,
                   and creating a detailed timeline and schedule for the event.
@@ -63,7 +63,7 @@
                 <img src="./assets/images/portfolio/venue-selection.jpg" alt="">
               </div>
               <div class="services_cards_details">
-                <h3>Venue Selection and Setup::</h3>
+                <h3>Venue Selection and Setup</h3>
                 <p>
                   This includes finding the perfect venue for the event, negotiating contracts, space planning, and
                   designing the layout to optimize the attendee experience. It also involves coordinating with
@@ -77,7 +77,7 @@
                 <img src="./assets/images/portfolio/vendor-managemen.jpg" alt="">
               </div>
               <div class="services_cards_details">
-                <h3>Vendor Management:</h3>
+                <h3>Vendor Management</h3>
                 <p>
                   Identifying and contracting with various vendors such as caterers, photographers,
                   videographers, florists, entertainers, security personnel, transportation services, etc. Ensuring
@@ -91,7 +91,7 @@
                 <img src="./assets/images/portfolio/event-production.jpg" alt="">
               </div>
               <div class="services_cards_details">
-                <h3>Event Production:</h3>
+                <h3>Event Production</h3>
                 <p>
                   Coordinating all logistics and technical aspects of the event, including stage management,
                   sound engineering, lighting design, and audio-visual production. Ensuring smooth transitions
@@ -105,7 +105,7 @@
                 <img src="./assets/images/portfolio/onsite-mng.jpg" alt="">
               </div>
               <div class="services_cards_details">
-                <h3>On-Site Event Management:</h3>
+                <h3>On-Site Event Management</h3>
                 <p>
                   Overseeing all on-site operations, including registration, attendee check-in, managing staff and
                   volunteers, troubleshooting any issues that may arise, and ensuring that all aspects of the event
@@ -119,7 +119,7 @@
                 <img src="./assets/images/portfolio/speaker-mng.jpg" alt="">
               </div>
               <div class="services_cards_details">
-                <h3>Guest and Speaker Management:</h3>
+                <h3>Guest and Speaker Management</h3>
                 <p>
                   Ensuring a positive experience for all guests and speakers, coordinating travel arrangements,
                   accommodation, transportation, and any specific requirements they may have.
@@ -132,7 +132,7 @@
                 <img src="./assets/images/portfolio/decor-design.jpg" alt="">
               </div>
               <div class="services_cards_details">
-                <h3>Decor and Theme Design:</h3>
+                <h3>Decor and Theme Design</h3>
                 <p>
                   Professional catering services that provide food and drink options according to the event's
                   requirements, preferences, and dietary restrictions. This may include buffet-style meals, seated
@@ -146,7 +146,7 @@
                 <img src="./assets/images/portfolio/entertainment-performance.jpg" alt="">
               </div>
               <div class="services_cards_details">
-                <h3>Entertainment and Performances:</h3>
+                <h3>Entertainment and Performances</h3>
                 <p>
                   Services offering live music, DJs, bands, dancers, magicians, or other performers to entertain
                   guests during social events. They may also provide audiovisual equipment, staging, and sound
@@ -160,7 +160,7 @@
                 <img src="./assets/images/portfolio/photo-video.jpg" alt="">
               </div>
               <div class="services_cards_details">
-                <h3>Photography and Videography:</h3>
+                <h3>Photography and Videography</h3>
                 <p>
                   Professional photographers and videographers capturing photos and videos to preserve
                   memories of social events. They can offer various packages, including a set number of hours or
@@ -174,7 +174,7 @@
                 <img src="./assets/images/portfolio/special-effects.jpg" alt="">
               </div>
               <div class="services_cards_details">
-                <h3>Special Effects:</h3>
+                <h3>Special Effects</h3>
                 <p>
                   Incorporating special effects, such as confetti cannons, fog machines, snow machines, and
                   bubbles, can add excitement and a sense of spectacle to events.                 
@@ -187,7 +187,7 @@
                 <img src="./assets/images/portfolio/rental.jpg" alt="">
               </div>
               <div class="services_cards_details">
-                <h3>Rental Options (Games and Inflatables):</h3>
+                <h3>Rental Options (Games and Inflatables)</h3>
                 <p>
                   Whether it's a birthday party, corporate event, festival, or family reunion, having these
                   entertainment options can create a lively and enjoyable atmosphere.               
