--- a/portfolio.html
+++ b/portfolio.html
@@ -129,10 +129,10 @@
 
             <a class="services_cards" style="cursor: default;">
               <div class="services_image">
-                <img src="./assets/images/portfolio/decor-design.jpg" alt="">
+                <img src="./assets/images/portfolio/catering.jpg" alt="">
               </div>
               <div class="services_cards_details">
-                <h3>Decor and Theme Design</h3>
+                <h3>Catering Services</h3>
                 <p>
                   Professional catering services that provide food and drink options according to the event's
                   requirements, preferences, and dietary restrictions. This may include buffet-style meals, seated
@@ -191,6 +191,18 @@
                 <p>
                   Whether it's a birthday party, corporate event, festival, or family reunion, having these
                   entertainment options can create a lively and enjoyable atmosphere.               
+                </p>
+              </div>
+            </a>
+
+            <a class="services_cards" style="cursor: default;">
+              <div class="services_image">
+                <img src="./assets/images/portfolio/decor-design.jpg" alt="">
+              </div>
+              <div class="services_cards_details">
+                <h3>Decor and Theme Design</h3>
+                <p>
+                  Our decor and theme design team can create aesthetic and visually pleasing experiences that leave a lasting impression on attendees.            
                 </p>
               </div>
             </a>
