--- a/about.html
+++ b/about.html
@@ -121,7 +121,7 @@
       <footer>
         <div class="footer_section_wrapper">
           <div class="footer_section footer_heading">
-            <h4>Event Flows Bangkok</h4>
+            <h4>Event Flow Bangkok</h4>
             <h2 style="color: var(--clr-accentred);">ART</h2>
             <h2 style="color: var(--clr-accentblue);">EXP</h2>
             <h2 style="color:var(--clr-yellow)">FUN</h2>
