--- a/services_7.html
+++ b/services_7.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap" rel="stylesheet">
-    <title>Event Flows - Services</title>
+    <title>Event Flow - Services</title>
   </head>
   <body>
     <header class="header" id="app">
@@ -173,7 +173,7 @@
       <footer>
         <div class="footer_section_wrapper">
           <div class="footer_section footer_heading">
-            <h4>Event Flows Bangkok</h4>
+            <h4>Event Flow Bangkok</h4>
             <h2 style="color: var(--clr-accentred);">ART</h2>
             <h2 style="color: var(--clr-accentblue);">EXP</h2>
             <h2 style="color:var(--clr-yellow)">FUN</h2>
