--- a/index.html
+++ b/index.html
@@ -323,13 +323,15 @@
             <div class="footer_section">
               <h3>Services</h3>
               <ul>
-                <li>Tradeshow and Exhibition</li>
-                <li>Conference and Summit</li>
-                <li>Music Festival and Concert</li>
-                <li>Corporate Events</li>
-                <li>Social and Cultural Events</li>
-                <li>Sporting</li>
-                <li>Wedding and Celebration</li>
+                <li><a href="services_1.html">Tradeshow and Exhibition</a></li>
+                <li><a href="services_2.html">Conference and Summit</a></li>
+                <li><a href="services_3.html">Music Festival and Concert</a></li>
+                <li><a href="services_4.html">Music Festival and Concert</a></li>
+                <li><a href="services_5.html">Social and Cultural Events</a></li>
+                <li><a href="services_6.html">Sporting</a></li>
+                <li><a href="services_7.html">Wedding and Celebration</a></li>
+                <li><a href="services_8.html">Personal Concierge</a></li>
+                <li><a href="services_9.html">Event Venue</a></li>
               </ul>
             </div>
 
@@ -345,11 +347,11 @@
             <div class="footer_section">
               <h3>Menu</h3>
               <ul>
-                <li>Home</li>
-                <li>Services</li>
-                <li>Portfolio</li>
-                <li>About Us</li>
-                <li>Contact Us</li>
+                <li><a href="index.html" >Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
               </ul>
             </div>
 
