--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <div class="hero__socials">
             <ul>
               <li>
-                <a href="https://www.facebook.com">Facebook</a>
+                <a href="https://www.facebook.com/EventFlowBangkok">Facebook</a>
               </li>
               <li>
                 <a href="https://www.twitter.com">Twitter</a>
@@ -126,7 +126,7 @@
             <div id="TE" class="tabcontent" style="display: flex;">
               <img src="./assets/images/services/trade shows.jpg" alt="" loading='lazy'>
               <div class="tabcontent-info">
-                <h3>Trade Show and Exhibitions</h3>
+                <h2>Trade Show and Exhibitions</h2>
                 <p>
                   Our Event Flow team collaborates with partners for comprehensive event planning, covering floor plans, booth layouts, and activity scheduling. We guide exhibitors, supervise onsite operations, address challenges, and analyze event progress for continuous improvement. Our adaptive team excels in quick problem-solving and thrives in fast-paced trade fair settings.
                 </p>
@@ -136,7 +136,7 @@
             <div id="CS" class="tabcontent">
               <img src="./assets/images/services/conference.jpg" alt="">
               <div class="tabcontent-info">
-                <h3>Conference and Summit</h3>
+                <h2>Conference and Summit</h2>
                 <p>
                   Our team meticulously manages conference budgets, covering all costs. With strong organizational and communication skills, creativity, and versatility, we ensure conferences meet objectives, provide a valuable experience, and leave a lasting impression through effective preparation and implementation.
                 </p>
@@ -146,7 +146,7 @@
             <div id="MC" class="tabcontent">
               <img src="./assets/images/services/music.jpg" alt="">
               <div class="tabcontent-info">
-                <h3>Music Festival and Concert</h3>
+                <h2>Music Festival and Concert</h2>
                 <p>
                   Our team crafts a comprehensive marketing strategy, utilizing social media, traditional advertising, and online channels. We collaborate with designers for visually appealing materials and PR firms for media coverage. Our professionals ensure flawless event logistics, marketing, and financial management for an engaging and unforgettable participant experience.
                 </p>
@@ -156,7 +156,7 @@
             <div id="CE" class="tabcontent">
               <img src="./assets/images/services/corporate.jpg" alt="">
               <div class="tabcontent-info">
-                <h3>Corporate Events</h3>
+                <h2>Corporate Events</h2>
                 <p>
                   We specialize in creating memorable business events, handling everything from conferences to product launches. Our trained specialists ensure precise execution, managing venue selection, logistics, catering, audio-visual setups, and entertainment. With a reliable network of vendors, we deliver high-quality services at reasonable prices.
                 </p>
@@ -166,7 +166,7 @@
             <div id="SC" class="tabcontent">
               <img src="./assets/images/services/cultural.jpg" alt="">
               <div class="tabcontent-info">
-                <h3>Social and Cultural</h3>
+                <h2>Social and Cultural</h2>
                 <p>
                   This role provides an extraordinary chance to immerse attendees in the dynamic world of cultural festivals. From choosing the theme and location to arranging performances, displays, and culinary experiences, our keen eye for detail will guarantee that every part of the event represents the depth and diversity of our client's cultural heritage.
                 </p>
@@ -176,7 +176,7 @@
             <div id="SS" class="tabcontent">
               <img src="./assets/images/services/sport.jpg" alt="">
               <div class="tabcontent-info">
-                <h3>Sporting Events</h3>
+                <h2>Sporting Events</h2>
                 <p>
                   We've left no stone unturned to make this event smooth and unforgettable. From world-class venues to simple transportation, we aim for the highest comfort and convenience for our audience. Enjoy every moment of the sports spectacle, from heart-pounding track and field to nail-biting basketball. Our event is not just about rivalry; it's about delivering a memorable experience for everyone attending.
                 </p>
@@ -186,7 +186,7 @@
             <div id="WC" class="tabcontent">
               <img src="./assets/images/services/wedding.jpg" alt="">
               <div class="tabcontent-info">
-                <h3>Wedding and Celebration</h3>
+                <h2>Wedding and Celebration</h2>
                 <p>
                   Specializing in exceptional events like weddings, receptions, anniversaries, and more, we work closely with you to capture your unique style and preferences. From initial consultation to final farewell, our team manages every detail – choosing beautiful locations, handling vendor reservations, and arranging exquisite decor – ensuring a magnificent environment that reflects your desires.
                 </p>
@@ -196,7 +196,7 @@
             <div id="PC" class="tabcontent">
               <img src="./assets/images/services/concierge.jpg" alt="">
               <div class="tabcontent-info">
-                <h3>Personal Concierge</h3>
+                <h2>Personal Concierge</h2>
                 <p>
                   We handle all aspects of your event, ensuring it's flawless and unforgettable. Our professional organizers work closely with you, managing events of all sizes. Let our concierge service handle the details, allowing you to focus on enjoying your event. Contact us to reserve our services for a unique event-planning experience.
                 </p>
@@ -206,7 +206,7 @@
             <div id="EV" class="tabcontent">
               <img src="./assets/images/services/event.jpg" alt="">
               <div class="tabcontent-info">
-                <h3>Event Venue</h3>
+                <h2>Event Venue</h2>
                 <p>
                   As industry professionals, our team of professionals has significant expertise and contacts with a wide range of venues, from conference rooms and hotels to outdoor areas and unusual locales. We can suggest the best venue depending on the client's needs, such as the type of event, budget, location, capacity, and theme. By evaluating these factors, we, the event organizers may choose a venue that fits our client's vision and assures a successful and memorable event.
                 </p>
@@ -319,45 +319,17 @@
               <h2 style="color:var(--clr-yellow)">FUN</h2>
               <h4>Experience the extraordinary.</h4>
             </div>
-
-            <div class="footer_section">
-              <h3>Services</h3>
-              <ul>
-                <li><a href="services_1.html">Tradeshow and Exhibition</a></li>
-                <li><a href="services_2.html">Conference and Summit</a></li>
-                <li><a href="services_3.html">Music Festival and Concert</a></li>
-                <li><a href="services_4.html">Music Festival and Concert</a></li>
-                <li><a href="services_5.html">Social and Cultural Events</a></li>
-                <li><a href="services_6.html">Sporting</a></li>
-                <li><a href="services_7.html">Wedding and Celebration</a></li>
-                <li><a href="services_8.html">Personal Concierge</a></li>
-                <li><a href="services_9.html">Event Venue</a></li>
-              </ul>
-            </div>
-
-            <div class="footer_section">
-              <h3>Contact us</h3>
-              <ul>
-                <li>eventflowbkk@gmail.com</li>
-                <li>0948517676</li>
-              </ul>
-            </div>
-
-            
-            <div class="footer_section">
-              <h3>Menu</h3>
-              <ul>
-                <li><a href="index.html" >Home</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-              </ul>
-            </div>
-
-            <div class="footer_section newsletter">
-              <h3>Our Newsletter</h3>
-              <a href="" class="button">Signup</a>
+            <div class="footer_menu">
+              <h2>Menu</h2>
+              <div class="footer_links">
+                <ul>
+                  <li><a href="index.html" >Home</a></li>
+                  <li><a href="services.html">Services</a></li>
+                  <li><a href="portfolio.html">Portfolio</a></li>
+                  <li><a href="about.html">About Us</a></li>
+                  <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+              </div>
             </div>
           </div>
       </footer>
